# Neo

./: .gitignore  CMakeLists.txt  Doxyfile  NeoCanvas.qml  NeoMenuBar.qml  NeoRadioButton.qml  README.md  main.qml  qml.qrc
docs/: annotated_dup.js  classConnection.html  classConnection.js  classNode.js  classRoom-members.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_dfdbda394c3f7a3aa55229f33a559c41.html  files.html  functions.html  functions_prop.html  functions_vars.html  hierarchy.html  index.html  index.qhp  navtreedata.js  room_8h_source.html
docs/doxygen/html/: annotated.html  classConnection-members.html  classNode-members.html  classNode.html  classRoom.html  classRoom.js  classbrief.html  classes.html  connection_8h_source.html  dir_1d81f7f4362e4398c0a695c4e466fcb0.html  functions_func.html  hierarchy.js  menudata.js  navtreeindex0.js  node_8h_source.html
docs/doxygen/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_a.js  all_c.js  all_d.js  all_e.js  functions_1.js  functions_4.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  properties_0.js  properties_1.js  properties_2.js
docs/doxygen/latex/: annotated.tex  classConnection.eps  classConnection.tex  classNode.eps  classNode.tex  classRoom.eps  classRoom.tex  classbrief.tex  hierarchy.tex  refman.tex
docs/search/: all_1.js  all_5.js  all_9.js  functions_7.js  searchdata.js
include/: connection.h  inputnode.h  neobasicnodedata.h  node.h  room.h
libs/osc/: OscPatternMatching.cpp  OscPatternMatching.h
libs/osc/composer/: OscBundleComposer.cpp  OscBundleComposer.h  OscContentComposer.cpp  OscMessageComposer.cpp
libs/osc/reader/: OscBundle.cpp  OscBundle.h  OscContent.cpp  OscContent.h  OscMessage.cpp  OscMessage.h  OscReader.cpp  OscReader.h  OscValue.cpp
libs/osc/reader/types/: OscBlob.cpp  OscChar.cpp  OscDouble.cpp  OscFloat.cpp  OscInteger.cpp  OscLong.cpp  OscMidi.cpp  OscRGBA.cpp  OscTimeTag.cpp  OscTimetag.h
libs/osc/tools/: ByteBuffer.cpp  ByteBuffer.h  ByteOrder.cpp  NtpTimestamp.cpp
res/db/: APOCALYPSE
src/: qml.qrc  qtquickcontrols2.conf
src/cpp/: connection.cpp  inputnode.cpp  main.cpp  neobasicnodedata.cpp  node.cpp  room.cpp
src/qml/: NeoBasicNode.qml  NeoBasicNode.qmlc  NeoBinderButton.qml  NeoCanvas.qml  NeoCanvas.qmlc  NeoCardGate.qml  NeoCardInput.qml  NeoCardOutput.qml  NeoComboBox.qml  NeoConnection.qml  NeoGate.qml  NeoInput.qml  NeoInputNode.qml  NeoLabelField.qml  NeoMenu.qml  NeoMenuBar.qml  NeoMenuBar.qmlc  NeoMenuItem.qml  NeoMenuItem.qmlc  NeoMenuSeparator.qml  NeoNode.qml  NeoOutput.qml  NeoOverrideButton.qml  NeoPopup.qml  NeoRadioButton.qml  NeoRadioButton.qmlc  NeoRangeSlider.qml  NeoRoom.qml  NeoSlot.qml  NeoSwitch.qml  main.qml
